// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render Label 1`] = `
<div>
  <div
    class="label "
  >
    Label
  </div>
</div>
`;

exports[`Label should render Label with custom className 1`] = `
<div>
  <div
    class="label custom-class-name"
  >
    Label
  </div>
</div>
`;
